--- a/resources/dynamic/default.html
+++ b/resources/dynamic/default.html
@@ -1,63 +1,13 @@
-<div id="adc_{%= CurrentADC.InstanceId %}" class="adc-headedScale">
-  <table>
-    <thead id="adc_{%= CurrentADC.InstanceId %}_thead">
-      <tr>
-       {%
-
-        Dim ar = CurrentQuestion.AvailableResponses
-
-        Dim inputName = ""
-        Dim inputId = ""
-        Dim inputValue = ""
-        Dim caption = ""
-				Dim arCaption = ""
-				Dim arPath = ""
-        Dim attrChecked = ""
-        Dim isExclusive = ""
-				Dim isAskiaExclusive = ""
-				Dim isSelected = ""
-        Dim chCount
-
-        Dim j = 0
-        Dim i = 0
-
-				For i = 1 To ar.Count
-          IF (ar[i].IsHeader = TRUE) THEN
-    				arCaption = ar[i].Caption
-            chCount = ar[i].Children.Count
-          %}
-            <th class="othersColumns responsesitems" colspan="{%:= chCount %}">
-              <div class="head padright">{%:= arCaption %}</div>
-            </th>
-          {% EndIF %}
-        {% Next i %}
-      </tr>
-    </thead>
-    <tbody>
-
-        <tr data-id="1" class="askiarow">
-          {% 	For j = 1 To ar.Count
-              IF (ar[j].IsHeader <> TRUE) THEN
-        				inputName = ar[j].InputName()
-        				inputId     = (inputName + "_" + j).Replace("U", "askia-input")
-                inputValue  = ar[j].InputValue()
-                caption     = ar[j].Caption
-        				isExclusive = On((ar[j].IsExclusive), " exclusive", "")
-        				isAskiaExclusive = On((ar[j].IsExclusive), "askia-exclusive", "")
-        				isSelected = On(CurrentQuestion.AvailableAnswers.Index Has ar[j].Index, " selected", "")
-                %}
-
-                <td class="response{%:= isExclusive %}{%:= isSelected %}">
-                    <input type="radio" id="{%= inputId %}" class="{%:= isAskiaExclusive %}" name="{%= inputName %}" value="{%= inputValue %}" />
-                    <label for="{%= inputId %}" class="askia-radio"><span hidden>Label</span></label>
-                    <label for="{%= inputId %}" class="responsesitems">
-                        {%:= caption %}
-                    </label>
-                </td>
-              {% EndIF %}
-          {% Next j %}
-        </tr>
-
-    </tbody>
-  </table>
+<div class="controlContainer" style="">
+    <div id="adc_{%= CurrentADC.InstanceId %}" class="adc-headedScale">
+        {% IF CurrentADC.PropValue("isInLoop") = "1" Then %}
+            {% If CurrentQuestion.Type = "single"  Then %}
+                {%:= CurrentADC.GetContent("dynamic/single_loop.html").ToText()%}
+            {% EndIF %}
+        {% Else %}
+            {% If CurrentQuestion.Type = "single"  Then %}
+                {%:= CurrentADC.GetContent("dynamic/single.html").ToText()%}
+            {% EndIF %}
+        {% EndIF %}
+    </div>
 </div>
